--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://Msinventedtech.github.io/SmartBrain",
+  "homepage": "https://Msinventedtech.github.io/SmartBrain2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
